update with savedData and url param for theme

--- a/Sources/EpubReaderLight/Resources/Web/themes.css
+++ b/Sources/EpubReaderLight/Resources/Web/themes.css
@@ -1,9 +1,9 @@
 .dark {
-    background: #000;
-    color: #fff
+  background: #000;
+  color: #fff;
 }
 
 .light {
-    background: #fff;
-    color: #000;
+  background: #fff;
+  color: #000;
 }
